
20160130T1212Z <gchicares@sbcglobal.net> [455]

  so_attributes.hpp
Forestall attribute warnings for gcc-4.9.1 as for gcc-4.9.2 .

20160130T1215Z <gchicares@sbcglobal.net> [455]

  main_wx.cpp
  mc_enum_types_aux.cpp
Don't attempt to force linking a function that is not visible. See:
  http://lists.nongnu.org/archive/html/lmi/2016-01/msg00087.html

20160130T1257Z <gchicares@sbcglobal.net> [455]

  install_msw.sh
Try to avoid an antimalware issue.

20160130T2139Z <gchicares@sbcglobal.net> [455]

  install_msw.sh
Exploit at least minimal parallelism by default.

20160202T1335Z <gchicares@sbcglobal.net> [455]

  install_msw.sh
Increase default parallelism.

20160205T1454Z <gchicares@sbcglobal.net> [455]

  install_msw.sh
Improve timestamping.

20160205T1455Z <gchicares@sbcglobal.net> [454]

  fancy.make
Resolve a marked defect.

20160210T1812Z <gchicares@sbcglobal.net> [454]

  workhorse.make
Include automated GUI test in fardels.

20160210T1816Z <gchicares@sbcglobal.net> [454]

  install_msw.sh
Synchronize 'make' output.

20160210T1827Z <gchicares@sbcglobal.net> [454]

  install_miscellanea.make
  install_wx.make
  install_wxpdfdoc.make
Suppress voluminous and uninteresting 'unzip' output.

20160210T1837Z <gchicares@sbcglobal.net> [454]

  install_wx.make
Upgrade wx.

20160212T1246Z <gchicares@sbcglobal.net> [454]

  install_wx.make
Upgrade wx. See:
  http://lists.nongnu.org/archive/html/lmi/2016-02/msg00036.html

20160212T2018Z <gchicares@sbcglobal.net> [454]

  GNUmakefile
  Makefile.am
  como.make
  configure.ac
  install_mpatrol.make      [expunged]
  install_msw.sh
  mpatrol-mingw-GNUmakefile [expunged]
  mpatrol_1.4.8.patch       [expunged]
  mpatrol_patch_test.cpp    [expunged]
  msw_common.make
  objects.make
  workhorse.make
Abandon mpatrol.

20160212T2102Z <gchicares@sbcglobal.net> [454]

  configure.ac
  msw_msys.make [expunged]
  path_utility.cpp
  test_coding_rules.cpp
  workhorse.make
Abandon MSYS.
