@@ -607,7 +607,6 @@ void check_defect_markers(file const& f)
             &&  "IHS "         != z[1]
             &&  "INELEGANT "   != z[1]
             &&  "INPUT "       != z[1]
-            &&  "MPATROL "     != z[1]
             &&  "PORT "        != z[1]
             &&  "SOA "         != z[1]
             &&  "SOMEDAY "     != z[1]
